freelancer add reviews

--- a/freelancing.html
+++ b/freelancing.html
@@ -52,6 +52,18 @@
     <main>
       <div id="title">
         <h1>Freelancing</h1>
+        <p>
+          Working as a forex MT4 EA and Indicator Developer on Fiverr since 2018
+          and currently a level 2 seller
+        </p>
+        <p>Below are the some of the reviews i got</p>
+      </div>
+      <div id="reviews">
+        <img src="images/review1.png" alt="" />
+        <img src="images/review2.png" alt="" />
+        <img src="images/review3.png" alt="" />
+        <img src="images/review4.png" alt="" />
+        <img src="images/review5.png" alt="" />
       </div>
     </main>
     <footer>
