--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
       </nav>
     </header>
     <main>
-      <div id="title">
+      <section id="projects">
         <h1>Projects</h1>
         <div class="cards" style="flex-wrap: wrap">
           <div class="card" style="width: 18rem">
