--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,11 @@
       </nav>
     </header>
     <main>
-      <section id="projects">
-        <h1>Projects</h1>
+      
+        <div id="title">
+          <h1>Projects</h1>
+        </div>
+        <section id="projects">
         <div class="cards" style="flex-wrap: wrap">
           <div class="card" style="width: 18rem">
             <img
