--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
           >Unsplash</a
         >
       </div>
+      <div>
+        <a href="https://www.linkedin.com/in/raveenjayasinghe/"
+          ><img src="images/LinkedIn_Logo.png" width="100px" alt=""
+        /></a>
+      </div>
     </footer>
   </body>
 </html>
