--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,18 @@
 
           <div class="card" style="width: 18rem">
             <img
+              src="images/NetworkCellInfo.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Network Cell Info Android App</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+          
+          <div class="card" style="width: 18rem">
+            <img
               src="images/wireless_water_level.jpg"
               class="card-img-top"
               alt="..."
